// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<h3
  className="sc-hdFWlR jMRgth"
>
  Heading
</h3>
`;

exports[`Caption renders colors 1`] = `
Array [
  <h3
    className="sc-hdFWlR jMRgth"
  >
    Default color is Bulma
  </h3>,
  <h3
    className="sc-hdFWlR bnhpwE"
    color="piccolo.100"
  >
    Piccolo
  </h3>,
  <h3
    className="sc-hdFWlR gnlZQW"
    color="trunks.100"
  >
    Trunks
  </h3>,
  <h3
    className="sc-hdFWlR ebmbAI"
    color="krillin.100"
  >
    Krillin
  </h3>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <h3
    className="sc-hdFWlR jMRgth"
  >
    Default font-weight is bold
  </h3>,
  <h3
    className="sc-hdFWlR cUoyUQ"
  >
    Font-weight is regular
  </h3>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <h3
    className="sc-hdFWlR jMRgth"
  >
    Line-height is pre-calculated
  </h3>,
  <h3
    className="sc-hdFWlR hRcfrY"
  >
    Custon line-height
  </h3>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <h3
    className="sc-hdFWlR jMRgth"
  >
    H3 is a default tag
  </h3>,
  <h2
    className="sc-hdFWlR jMRgth"
  >
    H2 tag
  </h2>,
  <h6
    className="sc-hdFWlR jMRgth"
  >
    H6 tag
  </h6>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <h3
    className="sc-hdFWlR jMRgth"
  >
    Default font-size is 16px
  </h3>,
  <h3
    className="sc-hdFWlR kMMLki"
    size={24}
  >
    Size is 24px
  </h3>,
  <h3
    className="sc-hdFWlR fpYnAa"
    size={48}
  >
    Size is 48px
  </h3>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <h3
    className="sc-hdFWlR jMRgth"
  >
    Text-align is not specified
  </h3>,
  <h3
    className="sc-hdFWlR ftqJgm"
  >
    Centered Heading
  </h3>,
  <h3
    className="sc-hdFWlR eHbsVt"
  >
    Right alignment
  </h3>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <h3
    className="sc-hdFWlR jMRgth"
  >
    Default text-decoration is none
  </h3>,
  <h3
    className="sc-hdFWlR fhbIxQ"
  >
    Underline Heading
  </h3>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <h3
    className="sc-hdFWlR jMRgth"
  >
    Default text-transform is none
  </h3>,
  <h3
    className="sc-hdFWlR iUBJiy"
  >
    Uppercase Heading
  </h3>,
]
`;
